# NDFC_Swagger

ndfc-sot/: .env  Dockerfile  NDFC_SOT_COMPLETE_PROMPT.md  README.md  alembic.ini  docker-compose.yaml  pyproject.toml  requirements.txt  startup.sh
ndfc-sot/alembic/: env.py
ndfc-sot/alembic/versions/: 001_initial_schema.py
ndfc-sot/ansible/: ndfc_deploy.yml
ndfc-sot/app/: __init__.py  auth.py  config.py  database.py  dependencies.py  exceptions.py  main.py
ndfc-sot/app/db_models/: __init__.py  base.py  fabric.py  global_config.py  interface.py  multisite.py  network.py  overlay_extensions.py  policy.py  route_control.py  switch.py  topology.py  underlay.py  vpc_peer.py  vrf.py
ndfc-sot/app/models/: __init__.py  common.py  deploy.py  fabric.py  global_config.py  inventory.py  multisite.py  topology.py  yaml_models.py
ndfc-sot/app/routers/: fabric.py  global_config.py  import_router.py  interfaces.py  networks.py  overlay_extensions.py  policy.py  route_control.py  switches.py  topology.py  underlay.py  vpc_peers.py  vrfs.py  yaml_deploy.py
ndfc-sot/app/services/: __init__.py  ansible_deployer.py  fabric_service.py  global_service.py  import_service.py  interface_service.py  network_service.py  overlay_extension_service.py  policy_service.py  route_control_service.py  switch_service.py  topology_service.py  underlay_service.py  vpc_peer_service.py  vrf_service.py  yaml_builder.py
ndfc-sot/app/tasks/: celery_app.py  (+1 more)
ndfc-sot/docs/: AGENT_PROMPT.md  API_DOCUMENTATION.md  PROJECT_GUIDE.md  sample_yaml_created.yml
ndfc-sot/tests/: conftest.py
(+47 files in other folders)
